[package]
name = "bcls"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
config = "0.13.4"
dirs = "5.0.1"
#futures = "0.3.30"
mockall = "0.12.1"
prettytable-rs = "0.10.0"
reqwest = { version = "0.11.23", features = ["blocking", "json"] }
serde = "1.0.193"
serde_json = "1.0.108"
#tokio = { version = "1.35.1", features = ["full"] }
urlencoding = "2.1.3"
