[package]
name = "bcls"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
config = "0.14.1"
dirs = "5.0.1"
#futures = "0.3.30"
mockall = "0.13.1"
prettytable-rs = "0.10.0"
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
serde = "1.0.216"
serde_json = "1.0.133"
#tokio = { version = "1.35.1", features = ["full"] }
urlencoding = "2.1.3"
